--- a/app-public/amberbio.css
+++ b/app-public/amberbio.css
@@ -1,4 +1,19 @@
 
+h2 {
+	text-align: center;
+	margin: 0 auto 0 auto;
+}
+
+
+.image {
+	margin: 2em auto 2em auto;
+	width: 30%;
+	text-align: center;
+}
+
+.image img {
+	width: 100%;
+}
 
 
 
