--- a/app-public/index.css
+++ b/app-public/index.css
@@ -2,7 +2,8 @@ body {
 	font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
 	font-size : 16px;
 	margin : 0;
-	color : rgb(80,80,80);
+	color : rgb(81,80,80);
+	background-color : rgb(222,235,247);
 }
 
 img {
@@ -72,6 +73,9 @@ article > hgroup {
 }
 
 section {
+	border-radius : 20px;
+	background-color : rgb(255, 255, 255);
+	margin: 20px 40px 20px 40px;
 	display : block;
 	padding : 0 50px 25px 50px;
 	border-bottom : 1px dotted rgb(220,220,220);
