--- a/app-public/index.css
+++ b/app-public/index.css
@@ -1,9 +1,45 @@
 body {
+	color : rgb(80,80,80);     
+}
+
+.logo-text {
+	   /*color : rgb(49,54,149);*/
+}
+
+.header {
+	background-color : rgb(224,243,248);
+}
+
+section {
+        background-color : rgb(255,255,255);
+}
+
+a {
+	color : rgb(26,150,65);
+}
+
+a:hover {
+	color : rgb(253,174,97);
+}
+
+h1, .logo-text {
+	color : rgb(49,54,149);
+}
+
+section > div > h2 {
+	color : rgb(69,117,180);
+}
+
+.logo-text:hover {
+	color : rgb(215,25,28);
+}
+
+
+
+body {
 	font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
 	font-size : 16px;
 	margin : 0;
-	color : rgb(81,80,80);
-	background-color : rgb(222,235,247);
 }
 
 svg {
@@ -15,7 +51,6 @@ svg {
 	position : relative;
 	left : 30px;	
 	bottom : 15px;
-	color : rgb(8,69,148);
 	font-weight : 300;
 	font-size : 50px;
 	/* text-shadow : 0 0 6px rgb(80,80,80); */
@@ -28,30 +63,8 @@ img {
 .header {
 	display : block;
 	height : 120px;
-	background-color : rgb(242,242,242);
-	/*background-image : url('../img/grass3.jpg');*/
-	color : rgb(220,220,220);
 	padding : 20px 50px;
 	/* box-shadow : inset 0 -15px 10px -10px rgba(0,0,0,.5); */
-}
-
-.header > h1, .header > h1 > a {
-	margin : 0 0 8px 0;
-	color : rgb(250,155,0);
-	font-weight : 300;
-	font-size : 50px;
-	/* text-shadow : 0 0 6px rgb(80,80,80); */
-}
-
-.header > h1 > a:hover {
-	color : rgb(250,155,0);
-	transition : none;
-	-moz-transition : none;
-	-webkit-transition : none;
-}
-
-.header-nav > a:hover {
-	color : rgb(150,230,255);
 }
 
 .header-nav a {
@@ -88,12 +101,10 @@ article > hgroup {
 }
 
 section {
-	border-radius : 20px;
-	background-color : rgb(255, 255, 255);
-	margin: 20px 40px 20px 40px;
+	margin: 10px 40px 40px 40px;
 	display : block;
-	padding : 0 50px 25px 50px;
-	border-bottom : 1px dotted rgb(220,220,220);
+	padding : 0 50px 0 50px;
+	/*border-bottom : 1px dotted rgb(220,220,220); */
 	overflow : hidden;
 }
 
@@ -121,7 +132,6 @@ section:last-child {
 }
 
 a {
-	color : rgb(20,200,255);
 	text-decoration : none;
 	transition: color 0.25s ease-in-out 0;
 	-webkit-transition: color 0.25s ease-in-out 0;
@@ -129,22 +139,16 @@ a {
 	cursor : pointer;
 }
 
-a:hover {
-	color : rgb(20,100,180);
-}
-
 h1 {
 	font-family: 'Helvetica Neue Bold', Helvetica, Arial, sans-serif;
 	font-size: 27px;
 	font-weight: bold;
-	color : rgb(20,170,240);
 }
 
 section > div > h2 {
 	font-family: 'Helvetica Neue Bold', Helvetica, Arial, sans-serif;
 	font-size: 18px;
 	font-weight: bold;
-	color : rgb(20,100,180);
 	text-transform : uppercase;
 }
 
