--- a/app-public/index.css
+++ b/app-public/index.css
@@ -2,16 +2,8 @@ body {
 	color : rgb(80,80,80);     
 }
 
-.logo-text {
-	   /*color : rgb(49,54,149);*/
-}
-
 .header {
 	background-color : rgb(224,243,248);
-}
-
-section {
-        background-color : rgb(255,255,255);
 }
 
 a {
@@ -34,11 +26,9 @@ section > div > h2 {
 	color : rgb(215,25,28);
 }
 
-
-
 body {
 	font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
-	font-size : 16px;
+	font-size : 18px;
 	margin : 0;
 }
 
@@ -53,42 +43,39 @@ svg {
 	bottom : 15px;
 	font-weight : 300;
 	font-size : 50px;
-	/* text-shadow : 0 0 6px rgb(80,80,80); */
 }
 
 img {
-    border-width: 0;
+    /* border-width: 0; */
 }
 
 .header {
 	display : block;
-	height : 120px;
-	padding : 20px 50px;
-	/* box-shadow : inset 0 -15px 10px -10px rgba(0,0,0,.5); */
+	height : auto;
+	padding : 20px 50px 10px 50px;
 }
 
 .header-nav a {
-	margin-right : 40px;
-	/* text-shadow : 0 0 4px rgb(80,80,80); */
+	float : left;
+	margin : 3px 60px 3px 0;
 }
 
 .tagline {
 	font-size : 20px;
 	line-height : 1.2;
-	margin : 10px 0;
+	margin : 15px 0;
 }
 
 .services {
 	overflow : hidden;
 }
 
-.service {
-	float : left;
-	width : 25%;
-	min-height : 220px;
-	padding-right : 5px;
-	box-sizing : border-box;
-	font-size : 18px;
+.column {
+	display : inline-block;
+	vertical-align : top;
+	width : 27%;
+	margin-right : 6%;
+	margin-bottom : 30px;
 }
 
 article {
@@ -106,25 +93,6 @@ section {
 	padding : 0 50px 0 50px;
 	/*border-bottom : 1px dotted rgb(220,220,220); */
 	overflow : hidden;
-}
-
-section:last-child {
-	border-bottom : 0px dotted rgb(80,80,80);
-}
-
-.columns {
-	overflow : hidden;
-	clear : both;
-}
-
-.columns > div {
-	float : left;
-	width : 28%;
-	margin-right : 5.3%;
-}
-
-.columns > div:last-child {
-	margin-right : 0px;
 }
 
 .address {
@@ -149,30 +117,23 @@ section > div > h2 {
 	font-family: 'Helvetica Neue Bold', Helvetica, Arial, sans-serif;
 	font-size: 18px;
 	font-weight: bold;
-	text-transform : uppercase;
+	/*text-transform : uppercase;*/
 }
 
 @media screen and (max-width: 1200px) {
-	.service {
-		width : 33%;
+	.column {
+		width : 43%;
 	}
 }
 
 @media screen and (max-width: 900px) {
-	.service {
-		width : 50%;
+	.column {
+		width : 99%;
+		margin-right : 0;
 	}
 }
 
 @media screen and (max-width: 600px) {
-	.service {
-		float : none;
-		width : auto;
-	}
-
-	body {
-		font-size : 20px;
-	}
 
 	article {
 		padding : 25px 0 50px 0;
@@ -188,12 +149,6 @@ section > div > h2 {
 	}
 
 	.header-nav a {
-		margin-right : 20px;
-	}
-
-	.columns > div {
-		float : none;
-		width : auto;
-		margin-right : 0;
+		 margin-right : 20px;
 	}
 }
