--- a/public/css/index.css
+++ b/public/css/index.css
@@ -158,3 +158,9 @@ section > div > h2 {
 	max-width : 1200px;
 	margin: 100px auto 0 auto;
 }
+
+table {
+        margin : 2em auto;
+        border-spacing : 0.5em;
+        border-collapse :
+}
