--- a/public/css/index.css
+++ b/public/css/index.css
@@ -161,6 +161,19 @@ section > div > h2 {
 
 table {
         margin : 2em auto;
-        border-spacing : 0.5em;
-        border-collapse :
+	text-align : center;
+        border-spacing : 1.5em;
+        border-collapse : collapse;
+}
+
+#table-of-contens {
+		  
+		  text-align : center;
+}
+
+.table-of-content-link {
+	/*display : block;*/
+        margin : 10px auto 0 20px;
+        text-decoration: none;
+        font-size: 110%;
 }
