--- a/public/css/index.css
+++ b/public/css/index.css
@@ -161,18 +161,18 @@ section > div > h2 {
 
 table {
         margin : 2em auto;
-	text-align : center;
-        border-spacing : 1.5em;
+	text-align : left;
+	border: 1px solid black;
+        border-spacing : 4.5em;
         border-collapse : collapse;
 }
 
-#table-of-contens {
-		  
-		  text-align : center;
+td, th {
+	border: 1px solid black;
+	padding : 15px;
 }
 
 .table-of-content-link {
-	/*display : block;*/
         margin : 10px auto 0 20px;
         text-decoration: none;
         font-size: 110%;
