--- a/public/css/index.css
+++ b/public/css/index.css
@@ -160,7 +160,7 @@ section > div > h2 {
 }
 
 table {
-        margin : 2em auto;
+        margin : 4em auto 2em auto;
 	text-align : left;
 	border: 1px solid black;
         border-spacing : 4.5em;
