--- a/public/css/index.css
+++ b/public/css/index.css
@@ -61,7 +61,6 @@ svg {
 
 .header-nav a {
     float : left;
-    margin : 0 60px 3px 0;
 }
 
 .tagline {
@@ -182,17 +181,14 @@ td, th {
     margin: auto;
 }
 
-@media screen and (max-width: 600px) {
-
-    .header-nav a {
-	margin-right : 20px;
-    }
-}
-
 @media only screen and (min-width : 320px) {
 
     .header {
 	padding : 10px 15px 10px 15px;
+    }
+
+    .header-nav a {
+	margin : 0 20px 3px 0;
     }
     
     .iphone-framed-1 {
@@ -230,6 +226,10 @@ td, th {
     .header {
 	padding : 10px 25px 10px 25px;
     }
+
+    .header-nav a {
+	margin-right : 10px;
+    }
     
     section {
        	margin : 20px 25px 30px 25px;
@@ -248,6 +248,10 @@ td, th {
 
     .header {
 	padding : 10px 25px 10px 25px;
+    }
+
+    .header-nav a {
+	margin-right : 2.1%;
     }
     
     section {
@@ -274,6 +278,10 @@ td, th {
 	padding : 10px 40px 10px 40px;
     }
 
+    .header-nav a {
+	margin-right : 40px;
+    }
+    
     .column {
 	width : 27%;
     }
@@ -292,6 +300,10 @@ td, th {
 }
 
 @media only screen and (min-width : 1200px) {
+
+    .header-nav a {
+	margin-right : 60px;
+    }
 
     .iphone-framed-1 {
 	width : 350px;
