--- a/public/css/index.css
+++ b/public/css/index.css
@@ -201,14 +201,18 @@ td, th {
     }
 
     section {
-       	margin : 10px 15px 20px 15px;
+       	margin : 10px 5px 20px 5px;
     }
     
    .column {
 	width : 99%;
 	margin-right : 0;
     }
-    
+
+    .container {
+        padding : 30px 0 30px 0;
+    }    
+
     .carousel {
        	width : 100%;
     }
