--- a/public/css/index.css
+++ b/public/css/index.css
@@ -89,9 +89,17 @@ article > hgroup {
     padding-left : 50px;
 }
 
-section {
+section, section-manual {
     display : block;
     overflow : hidden;
+}
+
+section-manual {
+   max-width : 800px;
+}
+
+section-manual > h1, section-manual > h1 > a {
+   color : rgb(69,117,180);
 }
 
 .address {
@@ -200,7 +208,7 @@ td, th {
        	width : 53%;  
     }
 
-    section {
+    section, section-manual {
        	margin : 10px 5px 20px 5px;
     }
     
@@ -236,7 +244,7 @@ td, th {
 	margin-right : 10px;
     }
     
-    section {
+    section, section-manual {
        	margin : 20px 25px 30px 25px;
     }
 
@@ -259,7 +267,7 @@ td, th {
 	margin-right : 2.1%;
     }
     
-    section {
+    section, section-manual {
        	margin : 20px 25px 30px 25px;
     }
 
@@ -292,7 +300,7 @@ td, th {
 	margin-right : 6%;
     }
     
-    section {
+    section, section-manual {
        	margin : 20px 40px 10px 40px;
     }
 
