--- a/public/css/index.css
+++ b/public/css/index.css
@@ -93,16 +93,13 @@ article > hgroup {
     padding-left : 50px;
 }
 
-section, section-manual {
+section.manual {
     display : block;
     overflow : hidden;
+    max-width : 800px;
 }
 
-section-manual {
-   max-width : 800px;
-}
-
-section-manual > h1, section-manual > h1 > a {
+section.manual > h1, section.manual > h1 > a {
    color : rgb(69,117,180);
 }
 
@@ -214,7 +211,7 @@ td, th {
 	max-width : 533px;
     }
 
-    section, section-manual {
+    section {
        	margin : 10px 5px 20px 5px;
     }
     
@@ -250,7 +247,7 @@ td, th {
 	margin-right : 10px;
     }
     
-    section, section-manual {
+    section {
        	margin : 20px 25px 30px 25px;
     }
 
@@ -273,7 +270,7 @@ td, th {
 	margin-right : 2.1%;
     }
     
-    section, section-manual {
+    section {
        	margin : 20px 25px 30px 25px;
     }
 
@@ -306,7 +303,7 @@ td, th {
 	margin-right : 6%;
     }
     
-    section, section-manual {
+    section {
        	margin : 20px 40px 10px 40px;
     }
 
